# ziftsieve

./: AUDIT.md  AUDIT_FINDINGS.md  AUDIT_REPORT.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SELF_ASSESSMENT.md  SPEC.md
.github/workflows/: keyhog.yml
benches/: ziftsieve_bench.rs
fuzz/: CHANGELOG.md  Cargo.toml  README.md  SPEC.md
fuzz/fuzz_targets/: fuzz_detect.rs  fuzz_gzip.rs  fuzz_lz4.rs  fuzz_snappy.rs
src/: builder.rs  detect.rs  extract.rs  index.rs  lib.rs  lz4.rs  snappy.rs
src/bloom/: filter.rs  hash.rs  mod.rs
src/extract/: mod.rs  tarball.rs
src/gzip/: bitstream.rs  deflate.rs  deflate_limit_tests.rs  deflate_tables.rs  header.rs  mod.rs
src/zstd/: decoder.rs  frame.rs  huffman.rs  keyhog.code-workspace  mod.rs  streaming.rs
tests/: adversarial_compressed.rs  adversarial_compression_detect.rs  adversarial_memory.rs  audit_false_negatives.rs  audit_false_positives.rs  audit_format_support.rs  audit_memory_safety.rs  break_it.rs  doc_tests.rs  format_roundtrip.rs  harness_gzip.rs  oom_poc.rs  security_audit_adversarial.rs  test_legendary_adversarial.rs  test_legendary_gap.rs  test_legendary_property.rs
tests/adversarial/: adversarial_compressed.proptest-regressions  adversarial_memory.rs  adversarial_truncation.rs  adversarial_zip_bombs.rs  mod.rs  security_audit_adversarial.rs
tests/break_it/: adversarial.rs  mod.rs
tests/concurrent/: concurrent_test.rs  mod.rs
tests/fixtures/: npm-sample-1.0.0.tgz
tests/integration/: concurrent_integration.rs  integration_tests.rs  mod.rs
tests/property/: mod.rs  property_tests.proptest-regressions  property_tests.rs
tests/regression/: mod.rs
tests/unit/: audit_false_positives.rs  audit_format_support.rs  audit_memory_safety.rs  doc_tests.rs  harness_bloom.rs  harness_gzip.proptest-regressions  harness_gzip.rs  harness_lz4.rs  mod.rs  test_legendary_unit.rs
