[package]
name = "ziftsieve"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Corum Collective LLC <contact@santh.io>"]
license = "MIT"
description = "Search compressed data without full decompression. Literal extraction and indexing for LZ4, Snappy, Gzip, and Zstd."
repository = "https://github.com/santhsecurity/Santh"
homepage = "https://github.com/santht/ziftsieve"
documentation = "https://docs.rs/ziftsieve"
readme = "README.md"
keywords = ["compression", "search", "lz4", "zstd", "bloom-filter"]
categories = ["compression", "algorithms", "text-processing"]

[dependencies]
hashkit = { version = "0.1",  path = "../../indexing/hashkit"  }
thiserror = "1.0"

# Bloom filter implementation
bit-vec = "0.8"

# Optional format support
lz4_flex = { version = "0.11", optional = true }
snap = { version = "1.1", optional = true }
zstd = { version = "0.13", optional = true }
flate2 = { version = "1.0", optional = true }
crc32fast = "1.3"
# Shared n-gram bloom filter for tarball integration
flashsieve = { version = "0.1",  path = "../../indexing/flashsieve"  }# SIMD support
portable-atomic = { version = "1.0", optional = true }

[dev-dependencies]
faultkit = { path = "../../testing/faultkit" }
criterion = { version = "0.5", features = ["html_reports"] }
flate2 = "1.0"
proptest = "1.4"
rand = "0.8"

[features]
default = ["lz4", "simd"]
lz4 = ["dep:lz4_flex"]
snappy = ["dep:snap"]
zstd = ["dep:zstd"]
gzip = ["dep:flate2"]
simd = ["dep:portable-atomic"]

[[bench]]
name = "ziftsieve_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"
panic = "deny"
pedantic = { level = "warn", priority = -1 }
